--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ html,
 body {
   background-color: #ededed;
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 html,
@@ -20,6 +22,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
